[add]service models module added

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<modules>
 		<module>crust-service</module>
 		<module>core-service</module>
+		<module>service-models</module>
 	</modules>
 
 </project>
