[add]object storage service put implementation

--- a/crust-service/src/main/resources/application.properties
+++ b/crust-service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
+
+objectstorage.s3provider.storage-endpoint=storageEndpoint
+objectstorage.s3provider.bucket-name=bucketName
+objectstorage.s3provider.access-key=accessKey
+objectstorage.s3provider.secret-key=secretKey
