--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,19 @@
 		<module>service-models</module>
 	</modules>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk</artifactId>
+				<version>1.11.133</version>
+			 </dependency>
+			 <dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.3.0</version>
+			 </dependency>
+		</dependencies>
+	</dependencyManagement>
+
 </project>
