[add]connection to message broker

--- a/crust-service/src/main/resources/application.properties
+++ b/crust-service/src/main/resources/application.properties
@@ -12,3 +12,12 @@ objectstorage.s3provider.storage-endpoint=storageEndpoint
 objectstorage.s3provider.bucket-name=bucketName
 objectstorage.s3provider.access-key=accessKey
 objectstorage.s3provider.secret-key=secretKey
+
+spring.rabbitmq.host=rabbitmq-host
+spring.rabbitmq.port=123456
+spring.rabbitmq.username=rabbitmq-port
+spring.rabbitmq.virtual-host==rabbitmq-virtualhost
+spring.rabbitmq.password=rabbitmq-password
+
+queues.registration-request.name=REGISTRATION_REQUESTS
+queues.registration-request.durability=true
