--- a/crust-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/crust-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,15 @@
     "name": "objectstorage.s3provider.secret-key",
     "type": "java.lang.String",
     "description": "A description for 'objectstorage.s3provider.secret-key'"
+  },
+  {
+    "name": "queues.registration-request.name",
+    "type": "java.lang.String",
+    "description": "A description for 'queues.registration-request.name'"
+  },
+  {
+    "name": "queues.registration-request.durability",
+    "type": "java.lang.Boolean",
+    "description": "A description for 'queues.registration-request.durability'"
   }
 ]}
