[add]structure of core service module

--- a/crust-service/pom.xml
+++ b/crust-service/pom.xml
@@ -24,11 +24,12 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk</artifactId>
-		 </dependency>
-		 <dependency>
+		</dependency>
+		<!-- required javax naming for aws java sdk puting s3 object -->
+		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-		 </dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
