[add]username generation in user persistent model and national ID encryption

--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.rabbitmq.virtual-host==rabbitmq-virtualhost
 spring.rabbitmq.password=rabbitmq-password
 
 queues.registration-request.name=REGISTRATION_REQUESTS
+
+encryption.secret=changeit
+encryption.salt=salt
