--- a/crust-service/src/main/resources/application.properties
+++ b/crust-service/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.rabbitmq.password=rabbitmq-password
 
 queues.registration-request.name=REGISTRATION_REQUESTS
 queues.registration-request.durability=true
+
+encryption.secret=changeit
+encryption.salt=salt
