--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -21,5 +21,20 @@ spring.rabbitmq.password=rabbitmq-password
 
 queues.registration-request.name=REGISTRATION_REQUESTS
 
+spring.mail.host=smtp.mailgun.org
+spring.mail.port=587
+spring.mail.username=domain.mailgun.org
+spring.mail.password=pass-wo-rd
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.from=domain.mailgun.org
+spring.mail.default-encoding=UTF-8
+spring.mail.test-connection=false
+
+rest.mail.mailgun.api-key=mailgun-api-key 
+rest.mail.mailgun.domain=domain.mailgun.org
+
 encryption.secret=changeit
 encryption.salt=salt
