--- a/core-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/core-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -28,5 +28,15 @@
     "name": "queues.registration-request.durability",
     "type": "java.lang.Boolean",
     "description": "A description for 'queues.registration-request.durability'"
+  },
+  {
+    "name": "rest.mail.mailgun.api-key",
+    "type": "java.lang.String",
+    "description": "A description for 'rest.mail.mailgun.api-key'"
+  },
+  {
+    "name": "rest.mail.mailgun.domain",
+    "type": "java.lang.String",
+    "description": "A description for 'rest.mail.mailgun.domain'"
   }
 ]}
