--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.mail.properties.mail.smtp.from=domain.mailgun.org
 spring.mail.default-encoding=UTF-8
 spring.mail.test-connection=false
 
-rest.mail.mailgun.api-key=mailgun-api-key 
-rest.mail.mailgun.domain=domain.mailgun.org
+recognition.image.imagga.api-key=api-key
+recognition.image.imagga.api-secret=api-secret
 
 encryption.secret=changeit
 encryption.salt=salt
